--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ version = "0.1.0"
 [dependencies]
 bincode = "0.5.6"
 csv = "0.14.4"
+kiss3d = "0.4.2"
+nalgebra = "0.8.2"
 rustc-serialize = "0.3.19"
 stopwatch = "0.0.6"
